gcc/testsuite/g++.dg/template/spec25.C
namespace N {
  template <typename T>
  struct S {
    void f() {}			// { dg-error "definition" }
  };
}

namespace K {
  template <> void N::S<char>::f() {} // { dg-error "different namespace" }
}
